chore: Add the infrastructure of database, the main models and manage the dependency injection container

--- a/CodeWithMena.PerfumeShop.DAL/CodeWithMena.PerfumeShop.DAL.csproj
+++ b/CodeWithMena.PerfumeShop.DAL/CodeWithMena.PerfumeShop.DAL.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Persistence\Data\Configurations\PerfumeOilConfiguration.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistence\Data\DataSeeds\" />
+    <Folder Include="Persistence\Data\Migrations\" />
+    <Folder Include="Persistence\Repositories\" />
+  </ItemGroup>
+
 </Project>
