--- a/CodeWithMena.PerfumeShop.BLL/CodeWithMena.PerfumeShop.BLL.csproj
+++ b/CodeWithMena.PerfumeShop.BLL/CodeWithMena.PerfumeShop.BLL.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\CodeWithMena.PerfumeShop.DAL\CodeWithMena.PerfumeShop.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+    <Folder Include="ModelsDtos\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
