--- a/CodeWithMena.PerfumeShop.PL/appsettings.json
+++ b/CodeWithMena.PerfumeShop.PL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=.;Initial Catalog=PerfumeShop;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlConnection": "Server=db32735.databaseasp.net; Database=db32735; User Id=db32735; Password=St9=5F?rP_o2; Encrypt=False; MultipleActiveResultSets=True;"
   }
 }
