--- a/CodeWithMena.PerfumeShop.PL/appsettings.Development.json
+++ b/CodeWithMena.PerfumeShop.PL/appsettings.Development.json
@@ -3,6 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "SqlConnection": "Data Source=.;Initial Catalog=PerfumeShop;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
     }
   }
 }
